# http-server

./: Cargo.toml  README.md
public/: hello.html  index.html  index.js
src/: main.rs  server.rs  web_handler.rs
src/http/: method.rs  mod.rs  parse_error.rs  query_string.rs  request.rs  response.rs  status_code.rs
