[package]
name = "http-server"
version = "0.1.0"
edition = "2018"
description = "A simple http server"
readme = "README.md"
repository = "https://github.com/mattcoding4days/http-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
